--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typescript": "^4.6.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -36,7 +37,6 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2"
+    "karma-jasmine-html-reporter": "~1.7.0"
   }
 }
